testcases/error/missing_reset_signal.veryl
module missing_reset_signal {
    let a: clock = 1;

    always_ff {
        if_reset {}
    }
}
